--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "BusinessPractice_App"
 include ':app'
 include ':GeoQuiz'
-include ':CrimeFragment'
+include ':CriminalIntent'
