--- a/CriminalIntent/build.gradle
+++ b/CriminalIntent/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -44,6 +45,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // ViewModel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    // Room
+    implementation 'androidx.room:room-runtime:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
 }
