또 다른 암시적 인텐트

--- a/CriminalIntent/src/main/AndroidManifest.xml
+++ b/CriminalIntent/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.criminalIntent">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
+
     <application
         android:name=".CriminalIntentApplication"
         android:allowBackup="true"
