--- a/CriminalIntent/src/main/AndroidManifest.xml
+++ b/CriminalIntent/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.criminalIntent">
 
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-feature android:name="android.hardware.camera"
-        android:required="false"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:name=".CriminalIntentApplication"
@@ -15,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BusinessPractice_App">
         <activity
-            android:name="com.example.criminalIntent.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,13 +27,13 @@
         </activity>
 
         <provider
-            android:authorities="com.example.businesspractice_app.fileprovider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.businesspractice_app.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/files"/>
+                android:resource="@xml/files" />
         </provider>
     </application>
 
